Html e css da tela 3.4

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <h1>BuzzQuizz</h1>
     </header>
-    <div class="quiz-beginning ">
+    <div class="quiz-beginning">
         <h1>Comece pelo começo</h1>
         <div class="beginning-board">
             <input type="text" id="quiz-title" placeholder="Título do seu quizz">
@@ -40,7 +40,7 @@
         </div>
         <button type="button" class="red-button">Prosseguir pra criar perguntas</button>
     </div>
-    <div class="questions-creation">
+    <div class="questions-creation hide">
         <h1>Crie suas perguntas</h1>
         <div class="questions-creation-board">
             <h2>Pergunta 1</h2><br>
@@ -85,7 +85,7 @@
         <button type="button" class="red-button">Prosseguir para criar níveis</button>
     </div>
 
-    <div class="level-creation">
+    <div class="level-creation hide">
         <h1>Agora, decida os níveis</h1>
         <div class="level-creation-board">
             <h2>Nível 1</h2><br>
@@ -107,6 +107,15 @@
         <button type="button" class="red-button">Finalizar Quizz</button>
     </div>
 
+    <div class="quiz-success hide">
+        <h1>Seu quizz está pronto!</h1>
+        <div>
+            <img src="" />
+            <p></p>
+        </div>
+        <button type="button" class="red-button">Acessar Quizz</button>
+        <button type="button" class="home-button">Voltar pra home</button>
+    </div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
