informações basicas do quizz

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
             </input><br>
             <input type="text" id="quiz-image-URL" placeholder="URL da imagem do seu quizz">
             </input><br>
-            <input type="text" id="number-of-question" placeholder="Quantidade de perguntas do quizz">
+            <input type="text" id="number-of-questions" placeholder="Quantidade de perguntas do quizz">
             </input><br>
             <input type="text" id="number-of-levels" placeholder="Quantidade de níveis do quizz">
             </input>
         </div>
-        <button type="button" class="red-button">Prosseguir pra criar perguntas</button>
+        <button type="button" class="red-button" onclick="infoValidation()">Prosseguir pra
+            criar perguntas</button>
     </div>
     <div class="questions-creation hide">
         <h1>Crie suas perguntas</h1>
