--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
     <header>
         <h1>BuzzQuizz</h1>
     </header>
-    <div class="quiz-beginning">
+
+    <div class="main-page">
+        <div class="created-quizzes">
+            <div class="no-quizz">
+                <p>Você não criou nenhum<br/>
+                quizz ainda :(</p>
+                <button class="create-quizz">Criar Quizz</button>
+            </div>
+        </div>
+
+        <div class="all-quizzes">
+            <p>Todos os Quizzes</p>
+        </div>
+    </div>
+
+    <div class="quiz-beginning hide">
         <h1>Comece pelo começo</h1>
         <div class="beginning-board">
             <input type="text" class="quiz-title" placeholder="Título do seu quizz">
@@ -40,9 +55,6 @@
         </div>
         <button type="button" class="red-button" onclick="infoValidation()">Prosseguir pra
             criar perguntas</button>
-    </div>
-    <div class="questions-creation hide">
-        <h1>Crie suas perguntas</h1>
     </div>
 
     <div class="level-creation hide">
@@ -85,3 +97,4 @@
 </body>
 
 </html>
+
