--- a/index.html
+++ b/index.html
@@ -26,22 +26,7 @@
     <header>
         <h1>BuzzQuizz</h1>
     </header>
-
-    <div class="main-page">
-        <div class="created-quizzes">
-            <div class="no-quizz">
-                <p>Você não criou nenhum<br/>
-                quizz ainda :(</p>
-                <button class="create-quizz">Criar Quizz</button>
-            </div>
-        </div>
-
-        <div class="all-quizzes">
-            <p>Todos os Quizzes</p>
-        </div>
-    </div>
-
-    <div class="quiz-beginning hide">
+    <div class="quiz-beginning">
         <h1>Comece pelo começo</h1>
         <div class="beginning-board">
             <input type="text" class="quiz-title" placeholder="Título do seu quizz">
@@ -55,6 +40,10 @@
         </div>
         <button type="button" class="red-button" onclick="infoValidation()">Prosseguir pra
             criar perguntas</button>
+    </div>
+
+    <div class="questions-creation hide">
+        <h1>Crie suas perguntas</h1>
     </div>
 
     <div class="level-creation hide">
@@ -97,4 +86,3 @@
 </body>
 
 </html>
-
