--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <div class="quiz-beginning">
         <h1>Comece pelo começo</h1>
         <div class="beginning-board">
-            <input type="text" class="quiz-title" placeholder="Título do seu quizz">
+            <input type="text" class="quiz-title" placeholder="Título do seu quizz (20 a 65 letras)">
             </input><br>
-            <input type="text" class="quiz-image-URL" placeholder="URL da imagem do seu quizz">
+            <input type="text" class="quiz-image-URL" placeholder="URL da imagem do seu quizz ('http:...')">
             </input><br>
-            <input type="text" class="number-of-questions" placeholder="Quantidade de perguntas do quizz">
+            <input type="text" class="number-of-questions" placeholder="Quantidade de perguntas do quizz (min. 3)">
             </input><br>
-            <input type="text" class="number-of-levels" placeholder="Quantidade de níveis do quizz">
+            <input type="text" class="number-of-levels" placeholder="Quantidade de níveis do quizz (min 2)">
             </input>
         </div>
         <button type="button" class="red-button" onclick="infoValidation()">Prosseguir pra
