--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
     <header>
         <h1>BuzzQuizz</h1>
     </header>
-<<<<<<< HEAD
 
-    <div class="main-page">
+    <div class="main-page hide">
         <div class="created-quizzes">
             <div class="no-quizz">
-                <p>Você não criou nenhum<br/>
-                quizz ainda :(</p>
+                <p>Você não criou nenhum<br />
+                    quizz ainda :(</p>
                 <button class="create-quizz" onclick="changePage('.main-page', '.quiz-beginning')">Criar Quizz</button>
             </div>
         </div>
@@ -42,10 +41,7 @@
         </div>
     </div>
 
-    <div class="quiz-beginning hide">
-=======
     <div class="quiz-beginning">
->>>>>>> cb427d5091adcf0091007f1ba99f547f389c9366
         <h1>Comece pelo começo</h1>
         <div class="beginning-board">
             <input type="text" class="quiz-title" placeholder="Título do seu quizz (20 a 65 letras)">
