--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>BuzzQuizz</h1>
     </header>
 
-    <div class="main-page">
+    <div class="main-page hide">
         <div class="created-quizzes">
             <div class="no-quizz">
                 <p>Você não criou nenhum<br />
@@ -63,24 +63,6 @@
 
     <div class="level-creation hide">
         <h1>Agora, decida os níveis</h1>
-        <div class="level-creation-board">
-            <h2>Nível 1</h2><br>
-            <div><input type="text" placeholder="Título do nível" class="level-title">
-                </input><br>
-                <input type="text" placeholder="% de acerto mínima" class="%-right-answer">
-                </input><br>
-                <input type="text" placeholder="URL da imagem do nível" class="level-image-URL">
-                </input><br>
-                <input type="text" placeholder="Descrição do nível" class="level-description">
-                </input>
-            </div>
-
-        </div>
-        <div class="level-creation-board">
-            <h2>Nível 2</h2>
-            <ion-icon name="create-outline"></ion-icon>
-        </div>
-        <button type="button" class="red-button">Finalizar Quizz</button>
     </div>
 
     <div class="quiz-success hide">
