criação do quizz - sucesso do quizz 75%

--- a/index.html
+++ b/index.html
@@ -65,17 +65,12 @@
         <h1>Agora, decida os níveis</h1>
     </div>
 
-    <div class="quiz-success hide">
+    <div class="quiz-success">
         <h1>Seu quizz está pronto!</h1>
-        <div>
-            <img src="" />
-            <p></p>
-        </div>
-        <button type="button" class="red-button">Acessar Quizz</button>
-        <button type="button" class="home-button">Voltar pra home</button>
+
     </div>
 
-    <div class="quizz-page">
+    <div class="quizz-page hide">
         <div class="quizz-title">
             <div class="opacity-layer">
             </div>
