bugs corrigidos, criação de quiz concluido

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 <body>
     <header>
-        <h1>BuzzQuizz</h1>
+        <h1 onclick="home()">BuzzQuizz</h1>
     </header>
 
-    <div class="main-page hide">
+    <div class="main-page">
         <div class="created-quizzes">
             <div class="no-quizz">
                 <p>Você não criou nenhum<br />
@@ -65,7 +65,7 @@
         <h1>Agora, decida os níveis</h1>
     </div>
 
-    <div class="quiz-success">
+    <div class="quiz-success hide">
         <h1>Seu quizz está pronto!</h1>
 
     </div>
