--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
             <div class="my-quizzes hide">
                 <div class="my-quizzes-header">
                     <p>Seus Quizzes</p>
-                    <ion-icon name="add-circle"></ion-icon>
+                    <ion-icon name="add-circle" onclick="changePage('.main-page', '.quiz-beginning')"></ion-icon>
                 </div>
             </div>
         </div>
 
-        <p>Todos os Quizzes</p>
+        <strong>Todos os Quizzes</strong>
         <div class="all-quizzes" data-identifier="general-quizzes">
+            
         </div>
     </div>
 
