--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <strong>Todos os Quizzes</strong>
+        <div class="all-quizzes-header">Todos os Quizzes</div>
         <div class="all-quizzes" data-identifier="general-quizzes">
             
         </div>
